deploy (0.2-12) lenny; urgency=low

  * NOT RELEASED
  * add pre,post-create-code hooks
  * nicer variable name in hooks
  * fix comments typo in deploy.cfg

 -- Frederic Junod <frederic.junod@camptocamp.com>  Fri, 15 May 2009 11:43:04 +0200

deploy (0.2-11) lenny; urgency=low

  * allow to deploy only database tables
  * allow to cleanely deactivate the 'file', 'code', 'database' or 'apache' component 

 -- Frederic Junod <frederic.junod@camptocamp.com>  Fri, 15 May 2009 10:38:04 +0200

deploy (0.2-10) lenny; urgency=low

  * allow to deploy project without databases

 -- Frederic Junod <frederic.junod@camptocamp.com>  Wed, 15 Apr 2009 17:04:07 +0200

deploy (0.2-9) lenny; urgency=low

  * include symlinks in code and files

 -- Frederic Junod <frederic.junod@camptocamp.com>  Fri, 03 Apr 2009 11:58:36 +0200

deploy (0.2-8) lenny; urgency=low

  * be nice when restoring packages without componant

 -- Frederic Junod <frederic.junod@camptocamp.com>  Fri, 20 Mar 2009 14:29:20 +0100

deploy (0.2-7) lenny; urgency=low

  * bugfix
  * remote deploy hosts

 -- Frederic Junod <frederic.junod@camptocamp.com>  Thu, 19 Mar 2009 14:52:14 +0100

deploy (0.2-6) lenny; urgency=low

  * run default hooks
  * remote deploy

 -- Frederic Junod <frederic.junod@camptocamp.com>  Wed, 18 Mar 2009 12:34:56 +0100

deploy (0.2-5) lenny; urgency=low

  * fix path ending (alex)
  * custom hookdir in 'main' section	

 -- Frederic Junod <frederic.junod@camptocamp.com>  Mon, 16 Mar 2009 08:11:03 +0100

deploy (0.2-4) lenny; urgency=low

  * handle projects with not files

 -- Frederic Junod <frederic.junod@camptocamp.com>  Fri, 13 Mar 2009 11:07:55 +0100

deploy (0.2-3) lenny; urgency=low

  * do a 'deploy-$PROJECT.sh -r' instead of '-i'

 -- Frederic Junod <frederic.junod@camptocamp.com>  Fri, 13 Mar 2009 08:30:01 +0100

deploy (0.2-2) lenny; urgency=low

  * fix try catch typo

 -- Frederic Junod <frederic.junod@camptocamp.com>  Thu, 12 Mar 2009 16:08:05 +0100
