@@ -23,11 +23,15 @@ restore_table = pg_restore -Fc --single-transaction
 [files]
 # if you don't want to activate this feature, uncomment the following line:
 # active = false
+# set the ignore pattern if you dont want to copy some files or directories:
+# ignore = *.pyc, .svn/
 dirs = /var/sig/shp/%(project)s/
 
 [code]
 # if you don't want to activate this feature, uncomment the following line:
 # active = false
+# set the ignore pattern if you dont want to copy some files or directories:
+# ignore = *.pyc, .svn/
 dir = /var/www/%(project)s/private/%(project)s/
 
 [apache]
