@@ -1,9 +1,10 @@
 deploy (0.2-12) lenny; urgency=low
 
   * NOT RELEASED
-  * add pre,post-create-code hooks
+  * add pre-create-code and post-create-code hooks
   * nicer variable name in hooks
   * fix comments typo in deploy.cfg
+  * add 'ignore' option in code and files components
 
  -- Frederic Junod <frederic.junod@camptocamp.com>  Fri, 15 May 2009 11:43:04 +0200
 
